Fix: Font color on all skins except stylish we're inherited from parent element.
If parent had a white font color the text were pretty much unreadable.

--- a/skins/blue/skin.unminified.css
+++ b/skins/blue/skin.unminified.css
@@ -10,6 +10,7 @@
 ul.krumo-node {
 	margin: 0px;
 	padding: 0px;
+	color: #000;
 	}
 ul.krumo-node ul {
 	margin-left: 20px;
