--- a/skins/schablon.com/skin.unminified.css
+++ b/skins/schablon.com/skin.unminified.css
@@ -11,6 +11,7 @@ ul.krumo-node {
 	margin: 0px;
 	padding: 0px;
 	background-color: white;
+	color: #000;
 	}
 ul.krumo-node ul {
 	margin-left: 20px;
